# osm-lump-ways

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
contrib/: osm-lump-ways-betweenness.mapcss
src/: btreemapsplitkey.rs  cli_args.rs  dij.rs  fileio.rs  formatting.rs  fw.rs  get_two_muts.rs  graph.rs  haversine.rs  inter_store.rs  kosaraju.rs  lib.rs  main.rs  nodeid_position.rs  nodeid_wayids.rs  sorted_slice_store.rs  tagfilter.rs  taggrouper.rs  topn_vec.rs  utils.rs  way_group.rs  way_id_rel_tags.rs
src/graph/: directed_graph.rs  directed_graph_contractable.rs  mod.rs  tests.rs  undirected_graph.rs
