[package]
name = "osm-lump-ways"
version = "3.8.0"
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/osm-lump-ways"
description = "Group OpenStreetMap lines based on graph topology and OSM tags"
keywords = ["openstreetmap", "osm", "topology"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
country-boundaries = "1.2.0"
csv = "1.4.0"
env_logger = "0.11.9"
geo = "0.32.0"
get-size = { version = "0.1.4", features = ["derive"] }
indicatif = "0.18"
indicatif-log-bridge = "0.2.3"
indices = "0.3.6"
itertools = "0.14.0"
kdtree = "0.8.0"
kiddo = "5.2.4"
log = "0.4.29"
memory-stats = "1.2.0"
num-format = "0.4.4"
ordered-float = "5.1.0"
osmio = "0.14.0"
radix-heap = "0.4.2"
rand = "0.10.0"
rayon = "1.11.0"
read-progress = "0.5.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "1.15"
smol_str = "0.3.5"
vartyint = "0.3.0"

[profile.dev]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
lto = false

[profile.opt]
inherits = "release"
lto = "fat"
panic = "abort"
