[package]
name = "osm-lump-ways"
version = "3.10.0-dev"
edition = "2024"
authors = ["Amanda McCann <amanda@technomancy.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amandasaurus/osm-lump-ways"
description = "Group OpenStreetMap lines based on graph topology and OSM tags"
keywords = ["openstreetmap", "osm", "topology"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
country-boundaries = "1.2.0"
csv = "1.4.0"
env_logger = "0.11.11"
geo = "0.33.1"
get-size = { version = "0.1.4", features = ["derive"] }
indicatif = "0.18"
indicatif-log-bridge = "0.2.3"
indices = "0.3.6"
itertools = "0.15.0"
kdtree = "0.8.0"
kiddo = "5.3.2"
log = "0.4.33"
memory-stats = "1.2.0"
num-format = "0.4.4"
ordered-float = "5.3.0"
osmio = "0.15.0"
radix-heap = "0.4.2"
rand = "0.10.2"
rayon = "1.12.0"
read-progress = "0.5.0"
regex = "1.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
smallvec = "1.15"
smol_str = "0.3.6"
vartyint = "0.3.0"

[profile.dev]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
lto = false

[profile.opt]
inherits = "release"
lto = "fat"
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
enum_glob_use = "allow"
explicit_into_iter_loop = "allow"
if_not_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_continue = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
